TieLine is not a line anymore: it is only a container (not a connectable) of two dangling lines
Signed-off-by: VEDELAGO MIORA <miora.ralambotiana@rte-france.com>